Make dashboard explorers server authoritative
